test/e2e/testdata/authorization-client-ip.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-authorization-client-ip-1
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: Exact
            value: /protected1
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-authorization-client-ip-2
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: Exact
            value: /protected2
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authorization-client-ip-1
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: http-with-authorization-client-ip-1
  authorization:
    defaultAction: Allow
    rules:
      - name: "deny-location-1" # First matching rule is applied, so 192.168.1.0/24 will be denied
        action: Deny
        principal:
          clientCIDRs:
            - 192.168.1.0/24
      - name: "allow-location-1"
        action: Allow
        principal:
          clientCIDRs:
            - 192.168.1.0/24
            - 192.168.2.0/24 # First matching rule is applied, so 12.168.2.0/24 will be allowed
      - name: "deny-location-2"
        action: Allow
        principal:
          clientCIDRs:
            - 192.168.2.0/24
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authorization-client-ip-2
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: http-with-authorization-client-ip-2
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
            - 10.0.1.0/24
            - 10.0.2.0/24
---
# This is a client traffic policy that enables client IP detection using the XFF header.
# So, the client IP can be detected from the XFF header and used for authorization.
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: enable-client-ip-detection
  namespace: gateway-conformance-infra
spec:
  clientIPDetection:
    xForwardedFor:
      numTrustedHops: 1
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: same-namespace
